# rust-lang

./: .gitignore  Cargo.toml  README.md  alloc.plt  alloc.tsv
actix/: Cargo.toml
actix/src/: handlers.rs  main.rs
adder/src/: lib.rs  lib2.rs
async_book/: Cargo.toml  async.md
async_book/src/: main.rs  timer.rs
async_book/webserver/: 404.html  hello.html  main.rs
rust_in_action/: Cargo.toml
rust_in_action/src/: MEMORY.md  bit_patterns.rs  main.rs  memory.rs
rust_programming/: Cargo.toml
rust_programming/adder/src/: lib.rs  lib2.rs
rust_programming/src/advanced_features/: main.rs  unsafe_rust.rs
rust_programming/src/concurrency/: main.rs
rust_programming/src/functional_language_features/: main.rs
rust_programming/src/generic_types/: main.rs
rust_programming/src/minigrep/: lib.rs  main.rs
rust_programming/src/oop/: main.rs
rust_programming/src/pattern_matching/: main.rs
rust_programming/src/smart_pointers/: main.rs
rust_programming/src/traits/: main.rs
rust_programming/src/webserver/: main.rs  thread_pool.rs
src/automated_tests/: main.rs
src/concurrency/: main.rs
src/functional_language_features/: main.rs
src/generic_types/: main.rs
src/main/: main.rs
src/minigrep/: lib.rs  main.rs
src/multiple_files/: file1.rs  main.rs
src/multiple_files/file2/: mod.rs
src/my_lib/: my_lib.rs
src/smart_pointers/: main.rs
