[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
serde = {version = "1.0.219", features =["derive"]}
serde_json= "1"
futures ="0.3"
futures-util = "0.3.31"
env_logger = "0.11.7"
